LoginPopup issue fix on Mobile

--- a/src/component/HeaderAccount/HeaderAccount.style.scss
+++ b/src/component/HeaderAccount/HeaderAccount.style.scss
@@ -117,6 +117,7 @@
     cursor: default;
     pointer-events: all;
     z-index: 100;
+    height: 100%;
 
     @include desktop {
       display: block;
